# Pangolin

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/SimpleBspline/: CMakeLists.txt  bspline.h  main.cpp
examples/SimpleDisplay/: main.cpp
examples/SimpleRecord/: main.cpp
examples/SimpleVideo/: main.cpp
examples/VBODisplay/: CMakeLists.txt  main.cpp
include/pangolin/: display_glut.h  gl.h  handler.h
include/pangolin/image/: image.h
include/pangolin/video/: uvc.h
include/pangolin/video/drivers/: images.h  uvc.h
src/: CMakeLists.txt  handler.cpp  video.cpp  widgets.cpp
src/display/widgets/: widgets.cpp
src/video/: firewire.cpp  uvc.cpp
src/video/drivers/: firewire.cpp  images.cpp  uvc.cpp
